--- a/.gitignore
+++ b/.gitignore
@@ -40,12 +40,14 @@ var/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
+MANIFEST
 *.manifest
 *.spec
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+current-commit.txt
 
 # Unit test / coverage reports
 htmlcov/
@@ -64,6 +66,14 @@ coverage.xml
 
 # Django stuff:
 *.log
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
 
 # Sphinx documentation
 docs/_build/
@@ -74,11 +84,35 @@ target/
 # Ipython Notebook
 .ipynb_checkpoints
 
-# IDE stuff
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# dotenv
+.env
+
+# virtualenv
+venv/
+envs/
+envs3/
+ENV/
+
+# Spyder project settings
+.spyderproject
+
+# Rope project settings
+.ropeproject
+
+# PyCharm
 .idea
+
+# Vim
 *.swp
+
 .project
 .pydevproject
 
-# Ansible stuff
-*.retry
+# Visual Studio Code
+.vscode
